--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body data-spy="scroll" data-target="#navbar" data-offset="0">
     
-    <nav id="navbar" class="header__bg navbar navbar-expand-lg fixed-top">
+    <nav id="navbar" class="header__bg navbar navbar-expand-lg navbar-dark fixed-top">
       <a class="header__logo navbar-brand" href="#sec__Home">タクのウェブ</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
