試著把來源從css拿到html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="imgA"></div>
+            <div class="imgA" style="background-image: url('./img/d.jpg')"></div>
           </div>
           <div class="carousel-item">
             <div class="imgB"></div>
