結果把全部的url拿到html去就可以了

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
             <div class="imgA" style="background-image: url('./img/d.jpg')"></div>
           </div>
           <div class="carousel-item">
-            <div class="imgB"></div>
+            <div class="imgB" style="background-image: url('./img/c.jpg')"></div>
           </div>
           <div class="carousel-item">
-            <div class="imgC"></div>
+            <div class="imgC" style="background-image: url('./img/a.jpg')"></div>
           </div>
           <div class="carousel-item">
-            <div class="imgD"></div>
+            <div class="imgD" style="background-image: url('./img/b.jpg')"></div>
           </div>
           <div class="carousel-item">
-            <div class="imgE"></div>
+            <div class="imgE" style="background-image: url('./img/e.jpg')"></div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
